[metadata]
name = dt-range
version = attr: dt_range.__version__
url = https://github.com/nanato12/dt-range
author = nanato12
author_email = admin@nanato12.info
license = Apache License 2.0
license_file = LICENSE
description = Generators for datetime.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dt-range datetime-range datetime-generator
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

[flake8]
extend-ignore=E501
exclude=__init__.py
max-line-length=79
